--- a/diapos/Variabilidad.org
+++ b/diapos/Variabilidad.org
@@ -301,9 +301,13 @@ Existen tres estrategias principales:
 - acumulación energética combinada con predicción de rampas;
 - predicción de rampas sin acumulación.
 
+** SFCR con acumulación
+
+#+ATTR_LATEX: :width \textwidth
+[[file:../figs/EsquemaSFCRAcumulacion.pdf]]
+
 ** Limitación de rampas
-- La inclusión de sistemas de acumulación, siendo la opción más
-  evidente en centrales de gran tamaño, conlleva aumentos en los
+- La inclusión de sistemas de acumulación conlleva aumentos en los
   costes de instalación y en la complejidad y mantenimiento del
   sistema.
 
@@ -312,16 +316,59 @@ Existen tres estrategias principales:
   la acumulación necesaria, e incluso se puede evitar su inclusión en
   determinadas combinaciones de potencia instalada y requerimientos de
   rampas admisibles.
-** Cálculo de sistema de acumulación
 
-La batería es un elemento caro.
+** Cálculo del sistema de acumulación
 
-Objetivos:
+*** Objetivos
 - Dimensionar, en potencia y energía, la batería mínima necesaria.
-- Desarrollar estrategias de gestión que permitan, cumpliendo con la rampa máxima, minimizar el coste de la energía (LCOE):
+- Desarrollar estrategias de gestión que permitan, cumpliendo con la rampa máxima, minimizar el coste de la energía:
   - Minimizar Batería
   - Minimizar Degradación
   - Minimizar Pérdidas
 
-¿Cuánto almacenamiento es necesario para cumplir con una limitación de
-rampa? Modelo de la peor fluctuación
+** Cálculo del sistema de acumulación
+
+Modelo de la peor fluctuación:  (la planta actúa como filtro de una fluctuación en la irradiancia, un pulso se transforma en una exponencial)
+# Gráfica diapo 44
+
+#+begin_export latex
+\[
+  P(t) = 90 \cdot \exp(-t/\tau) + 10
+\]
+#+end_export
+
+#+begin_export latex
+\[
+  \tau = 42 \cdot L_{min} - 0.55
+\]
+#+end_export
+
+#+begin_export latex
+\[
+  E_{bat} = \frac{0.9 \cdot P_g^*}{3600} \cdot \left( \frac{90}{2 \cdot r_{max}} - \tau \right)
+\]
+#+end_export
+
+- $\tau [\unit{\second}]$: constante de tiempos de la fluctuación
+- $L_{min} [\unit{\kilo\meter}]$: dimensión menor de la central
+- $P_g^* [\unit{\kilo\watt}]$: potencia del generador fotovoltaico
+- $r_{\max} [\unit{\%\per\sec}]$: límite de rampa en potencia
+
+** Ejemplo
+
+Datos:
+#+begin_export latex
+\begin{align*}
+  P_g^* &= \qty{38.5}{\mega\watt}\\
+  L_{min} &= \qty{1.786}{\kilo\meter}\\
+  r_{max} &= \qty{10}{\%\per\min}
+\end{align*}
+#+end_export
+Resultados:
+#+begin_export latex
+\begin{align*}
+  \tau &= 42 \cdot \num{1.786} - \num{0.55} = \qty{74.46}{\second}\\
+  E_{bat} &= \frac{\num{0.9} \cdot \num{38500}}{\num{3600}} \cdot \left( \frac{90}{2 \cdot (10/60)} - \num{74.46} \right) = \qty{1882.05}{\kilo\watthour}\\
+  \frac{E_{bat}}{P_g^*} &= \qty{0.049}{\hour} 
+\end{align*}
+#+end_export
