--- a/diapos/Variabilidad.tex
+++ b/diapos/Variabilidad.tex
@@ -1,14 +1,16 @@
-% Created 2023-02-17 vie 11:04
+% Created 2023-02-20 lun 13:51
 % Intended LaTeX compiler: pdflatex
 \documentclass[aspectratio=169, usenames,svgnames,dvipsnames]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{graphicx}
+\usepackage{grffile}
 \usepackage{longtable}
 \usepackage{wrapfig}
 \usepackage{rotating}
 \usepackage[normalem]{ulem}
 \usepackage{amsmath}
+\usepackage{textcomp}
 \usepackage{amssymb}
 \usepackage{capt-of}
 \usepackage{hyperref}
@@ -56,16 +58,16 @@
  pdftitle={Variabilidad de la Potencia de una Central Fotovoltaica},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 28.2 (Org mode 9.6)}, 
+ pdfcreator={Emacs 28.2 (Org mode 9.4.6)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
 
 \section{Introducción}
-\label{sec:orgce5f5b7}
+\label{sec:org84f7b18}
 
-\begin{frame}[label={sec:org29e0409}]{Los Sistemas Fotovoltaicos y la Red Eléctrica}
+\begin{frame}[label={sec:org36ca141}]{Los Sistemas Fotovoltaicos y la Red Eléctrica}
 Los sistemas fotovoltaicos conectados a red alteran las condiciones de
 funcionamiento habitual de la red.
 
@@ -74,7 +76,7 @@ funcionamiento habitual de la red.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org184de90}]{Los Sistemas Fotovoltaicos y la Red Eléctrica}
+\begin{frame}[label={sec:org1e0847f}]{Los Sistemas Fotovoltaicos y la Red Eléctrica}
 \begin{itemize}
 \item Posibilitan la bidireccionalidad del flujo de potencia, con los
 consiguientes cambios en la tensión de los nodos, y en la corriente
@@ -86,7 +88,7 @@ conducida por las líneas y transformadores.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org70b93b5}]{Los Sistemas Fotovoltaicos y la Red Eléctrica}
+\begin{frame}[label={sec:orgd7ded16}]{Los Sistemas Fotovoltaicos y la Red Eléctrica}
 \begin{itemize}
 \item Las rampas de potencia debidas a las fluctuaciones de radiación
 solar pueden entorpecer el adecuado funcionamiento de los equipos
@@ -99,7 +101,7 @@ conectados a la red y los elementos de protección existentes.
 \end{frame}
 
 
-\begin{frame}[label={sec:org1b4459c}]{Los Sistemas Fotovoltaicos y la Red Eléctrica}
+\begin{frame}[label={sec:org4b310d1}]{Los Sistemas Fotovoltaicos y la Red Eléctrica}
 \begin{itemize}
 \item Los SFCR pueden proporcionar servicios de apoyo a la red gracias a
 las funcionalidades que incorporan los inversores de conexión a red,
@@ -113,7 +115,7 @@ enfrentarse a huecos de tensión.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd1705aa}]{Variabilidad de la Radiación}
+\begin{frame}[label={sec:org56ffa17}]{Variabilidad de la Radiación}
 \begin{itemize}
 \item La irradiancia solar es un proceso con inercia y con baja
 probabilidad para mostrar cambios abruptos.
@@ -128,7 +130,7 @@ altas.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgf2f0f8c}]{Variabilidad de la Radiación}
+\begin{frame}[label={sec:org0205510}]{Variabilidad de la Radiación}
 \begin{itemize}
 \item El nivel de fluctuación depende del comportamiento de la atmósfera (mayor en días parcialmente cubiertos).
 \end{itemize}
@@ -140,9 +142,9 @@ altas.
 
 
 \section{Incertidumbre y Predicción}
-\label{sec:org16bb8bb}
+\label{sec:org83a4f3f}
 
-\begin{frame}[label={sec:orgcf41d63}]{Generación y Demanda}
+\begin{frame}[label={sec:org79c978a}]{Generación y Demanda}
 La \alert{casación entre generación y demanda} que se consigue en las redes
 eléctricas se basa en la \alert{programación} de las diferentes unidades de
 \alert{generación} disponibles para suministrar la \alert{demanda prevista} y para
@@ -155,7 +157,7 @@ demanda.
 \end{frame}
 
 
-\begin{frame}[label={sec:org7053c79}]{Programación de la generación}
+\begin{frame}[label={sec:org4f8fce9}]{Programación de la generación}
 Esta programación se produce en \alert{escalas y horizontes temporales diversos} y se \alert{actualiza de forma sistemática} de acuerdo con las variaciones previstas en la predicción de la demanda.
 
 \begin{center}
@@ -168,7 +170,7 @@ Esta programación se produce en \alert{escalas y horizontes temporales diversos
 \end{frame}
 
 
-\begin{frame}[label={sec:orgb03e95c}]{Participación masiva de la fotovoltaica}
+\begin{frame}[label={sec:org01fcb4c}]{Participación masiva de la fotovoltaica}
 La \alert{inclusión masiva} de sistemas fotovoltaicos en la red \alert{modifica el
 equilibrio} existente y puede implicar el uso de las reservas de
 generación previstas originalmente para asumir las variaciones de la
@@ -180,7 +182,7 @@ demanda.
 \end{frame}
 
 
-\begin{frame}[label={sec:org575f541}]{Predicción de la Potencia}
+\begin{frame}[label={sec:org96dd2ea}]{Predicción de la Potencia}
 En este contexto el reto no es tanto la variabilidad como la
 \alert{predicción}:
 
@@ -195,7 +197,7 @@ fotovoltaicos es un área de investigación de plena actualidad.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org58195c0}]{Ejemplo: proyecto europeo PVCROPS}
+\begin{frame}[label={sec:org53284ae}]{Ejemplo: proyecto europeo PVCROPS}
 \begin{itemize}
 \item Herramienta de aprendizaje automático o \emph{machine learning}
 entrenada con series históricas de predicciones NWP y medidas de
@@ -211,7 +213,7 @@ temporal de 1 día.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org6b61eaa}]{Ejemplo: proyecto europeo PVCROPS}
+\begin{frame}[label={sec:orgde2a6db}]{Ejemplo: proyecto europeo PVCROPS}
 Se emplean como entradas las predicciones de variables
 meteorológicas generadas por modelos de predicción meteorológica
 numérica e índices de variación espacial y temporal estimados con
@@ -223,7 +225,7 @@ las variables meteorológicas.
 \end{frame}
 
 
-\begin{frame}[label={sec:orgee86a58}]{Ejemplo: proyecto europeo PVCROPS}
+\begin{frame}[label={sec:org0df001a}]{Ejemplo: proyecto europeo PVCROPS}
 Genera predicciones probabilísticas, entregando tanto la mediana de la
 predicción como un intervalo de confianza, que permite cuantificar la
 fiabilidad de la predicción, y que puede servir como medida indirecta
@@ -239,15 +241,15 @@ de la variabilidad futura.
 \end{frame}
 
 
-\begin{frame}[label={sec:orgb040857}]{Predicciones agregadas}
+\begin{frame}[label={sec:orgff2f62a}]{Predicciones agregadas}
 Las predicciones obtenidas mejoran cuando las predicciones se aplican
 a un conjunto de sistemas.
 \end{frame}
 
 \section{Variabilidad de la Potencia}
-\label{sec:orgf24b87b}
+\label{sec:org93fcf9a}
 
-\begin{frame}[label={sec:org76432f9}]{Variabilidad Conjunta}
+\begin{frame}[label={sec:orge9c6a49}]{Variabilidad Conjunta}
 La variabilidad presente en la irradiancia solar se \alert{atenúa} en la potencia AC:
 \begin{itemize}
 \item por la \alert{dispersión} espacial \alert{entre diferentes centrales}.
@@ -255,7 +257,7 @@ La variabilidad presente en la irradiancia solar se \alert{atenúa} en la potenc
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd2d3202}]{Dispersión espacial entre centrales}
+\begin{frame}[label={sec:orgccf5913}]{Dispersión espacial entre centrales}
 \begin{itemize}
 \item En términos generales, la \alert{dispersión espacial de sistemas
 fotovoltaicos diferentes} conectados a la misma red \alert{atenúa} la
@@ -275,7 +277,7 @@ esencialmente \alert{incorreladas}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org8ef2a40}]{Dispersión espacial dentro de una central}
+\begin{frame}[label={sec:org7f4e228}]{Dispersión espacial dentro de una central}
 En términos generales, la \alert{dispersión espacial} de generadores
 fotovoltaicos pertenecientes a \alert{una misma central} \alert{atenúa} la
 variabilidad conjunta.
@@ -285,7 +287,7 @@ variabilidad conjunta.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org20c95ab}]{Dispersión espacial dentro de una central}
+\begin{frame}[label={sec:orgbcef12e}]{Dispersión espacial dentro de una central}
 La correlación entre la potencia de cada inversor \alert{depende} de la \alert{resolución temporal}, la \alert{distancia} entre los inversores, y el \alert{nivel de fluctuación del día} en cuestión.
 
 \begin{center}
@@ -293,7 +295,7 @@ La correlación entre la potencia de cada inversor \alert{depende} de la \alert{
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org5b288a0}]{Dispersión espacial dentro de una central}
+\begin{frame}[label={sec:org8baec0d}]{Dispersión espacial dentro de una central}
 Escalas temporales bajas (\(\tau <\qty{1}{\min}\)): correlaciones bajas.
 
 \begin{center}
@@ -304,7 +306,7 @@ Escalas temporales bajas (\(\tau <\qty{1}{\min}\)): correlaciones bajas.
   \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org9fb3fff}]{Dispersión espacial dentro de una central}
+\begin{frame}[label={sec:org44418cd}]{Dispersión espacial dentro de una central}
 Escalas temporales intermedias: la correlación depende fuertemente del nivel de fluctuación diario.
 
 \begin{center}
@@ -315,7 +317,7 @@ Escalas temporales intermedias: la correlación depende fuertemente del nivel de
   \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgc4ad31b}]{Dispersión espacial dentro de una central}
+\begin{frame}[label={sec:org3cd72ee}]{Dispersión espacial dentro de una central}
 Escalas temporales altas, \(\tau > \qty{20}{\min}\): correlaciones altas y positivas que decrecen de forma exponencial con la distancia; clara dependencia con el nivel de fluctuación diaria.
 
 \begin{center}
@@ -326,7 +328,7 @@ Escalas temporales altas, \(\tau > \qty{20}{\min}\): correlaciones altas y posit
   \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org4a40ee1}]{Normativas de red}
+\begin{frame}[label={sec:orgb3625d3}]{Normativas de red}
 \begin{itemize}
 \item La variabilidad en escalas de tiempo bajas puede influir en mayor o
 menor medida en el funcionamiento de la red eléctrica.
@@ -342,11 +344,11 @@ A 10\% per minute rate (based on AC contracted capacity) limitation shall be enf
 \end{quote}
 \end{frame}
 
-\begin{frame}[label={sec:org95a4697}]{Definiciones de rampas}
+\begin{frame}[label={sec:orge8e8b36}]{Definiciones de rampas}
 Uno de los problemas principales en este requerimiento (y otros similares) es que, aunque es fácil identificar visualmente una rampa en una serie temporal de potencia, no existe consenso en una definición formal que permita identificarla y cuantificarla.
 \end{frame}
 
-\begin{frame}[label={sec:orgb4ee010}]{Ejemplos de definiciones de rampas}
+\begin{frame}[label={sec:org180121a}]{Ejemplos de definiciones de rampas}
 \begin{itemize}
 \item Existe una rampa al inicio de un intervalo temporal si la magnitud del cambio en un instante temporal posterior es mayor que un umbral predeterminado.
 \end{itemize}
@@ -375,7 +377,7 @@ valores máximo y mínimo supera un determinado umbral.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgdd89c28}]{Limitación de rampas}
+\begin{frame}[label={sec:org9944c45}]{Limitación de rampas}
 La limitación de las rampas de los sistemas fotovoltaicos es un
 requerimiento que se debe afrontar, principalmente en el caso de las
 centrales fotovoltaicas de gran tamaño.
@@ -388,10 +390,15 @@ Existen tres estrategias principales:
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2f9138b}]{Limitación de rampas}
+\begin{frame}[label={sec:org5b11872}]{SFCR con acumulación}
+\begin{center}
+\includegraphics[width=\textwidth]{../figs/EsquemaSFCRAcumulacion.pdf}
+\end{center}
+\end{frame}
+
+\begin{frame}[label={sec:orgab7de25}]{Limitación de rampas}
 \begin{itemize}
-\item La inclusión de sistemas de acumulación, siendo la opción más
-evidente en centrales de gran tamaño, conlleva aumentos en los
+\item La inclusión de sistemas de acumulación conlleva aumentos en los
 costes de instalación y en la complejidad y mantenimiento del
 sistema.
 
@@ -402,21 +409,56 @@ determinadas combinaciones de potencia instalada y requerimientos de
 rampas admisibles.
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org77e05d2}]{Cálculo de sistema de acumulación}
-La batería es un elemento caro.
 
-Objetivos:
+\begin{frame}[label={sec:org8aa47e2}]{Cálculo del sistema de acumulación}
+\begin{block}{Objetivos}
 \begin{itemize}
 \item Dimensionar, en potencia y energía, la batería mínima necesaria.
-\item Desarrollar estrategias de gestión que permitan, cumpliendo con la rampa máxima, minimizar el coste de la energía (LCOE):
+\item Desarrollar estrategias de gestión que permitan, cumpliendo con la rampa máxima, minimizar el coste de la energía:
 \begin{itemize}
 \item Minimizar Batería
 \item Minimizar Degradación
 \item Minimizar Pérdidas
 \end{itemize}
 \end{itemize}
+\end{block}
+\end{frame}
 
-¿Cuánto almacenamiento es necesario para cumplir con una limitación de
-rampa? Modelo de la peor fluctuación
+\begin{frame}[label={sec:orgffc54f8}]{Cálculo del sistema de acumulación}
+Modelo de la peor fluctuación:  (la planta actúa como filtro de una fluctuación en la irradiancia, un pulso se transforma en una exponencial)
+
+\[
+  P(t) = 90 \cdot \exp(-t/\tau) + 10
+\]
+
+\[
+  \tau = 42 \cdot L_{min} - 0.55
+\]
+
+\[
+  E_{bat} = \frac{0.9 \cdot P_g^*}{3600} \cdot \left( \frac{90}{2 \cdot r_{max}} - \tau \right)
+\]
+
+\begin{itemize}
+\item \(\tau [\unit{\second}]\): constante de tiempos de la fluctuación
+\item \(L_{min} [\unit{\kilo\meter}]\): dimensión menor de la central
+\item \(P_g^* [\unit{\kilo\watt}]\): potencia del generador fotovoltaico
+\item \(r_{\max} [\unit{\%\per\sec}]\): límite de rampa en potencia
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label={sec:org86cc3f0}]{Ejemplo}
+Datos:
+\begin{align*}
+  P_g^* &= \qty{38.5}{\mega\watt}\\
+  L_{min} &= \qty{1.786}{\kilo\meter}\\
+  r_{max} &= \qty{10}{\%\per\min}
+\end{align*}
+Resultados:
+\begin{align*}
+  \tau &= 42 \cdot \num{1.786} - \num{0.55} = \qty{74.46}{\second}\\
+  E_{bat} &= \frac{\num{0.9} \cdot \num{38500}}{\num{3600}} \cdot \left( \frac{90}{2 \cdot (10/60)} - \num{74.46} \right) = \qty{1882.05}{\kilo\watthour}\\
+  \frac{E_{bat}}{P_g^*} &= \qty{0.049}{\hour} 
+\end{align*}
 \end{frame}
 \end{document}
